# dice-poker

./: Makefile
src/frontend/: dices.js  site.html  styles.css
src/userver/: CMakeLists.txt  ScrabbleGame.cpp  ScrabbleGame.hpp  example.json  main.cpp  plan.md  red_main.cpp  red_static_config.yaml  redis.cpp  sqlite.cpp  static_config.yaml  websocket.cpp  websocket.hpp  ws_main.cpp
src/userver/final/: CMakeLists.txt  DiceGame.cpp  DiceGame.hpp  example.json  main.cpp  redis.cpp  sqlite.cpp  websocket.cpp  websocket.hpp
src/userver/test/scrabble_game/: ScrabbleGame.cpp  ScrabbleGame.hpp  main.cpp
